--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,33 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default Suite</th></tr>
-<tr><td><a href="#t0">SATT21.05.09-NguyenThanhVien-Selenium1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,709</td><td></td><td></td></tr>
+<tr><td><a href="#t0">SATT21.05.09-NguyenThanhVien-Selenium1</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">18,716</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SATT21.05.09-NguyenThanhVien-Selenium1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestCases.TestCase9</td><td><a href="#m0">TC09</a></td><td rowspan="1">1641481220087</td><td rowspan="1">11270</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SATT21.05.09-NguyenThanhVien-Selenium1 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestCases.FTTC202</td><td><a href="#m0">FTTC201</a></td><td rowspan="1">1641536508434</td><td rowspan="1">11116</td></tr></tbody>
 </table>
-<h2>SATT21.05.09-NguyenThanhVien-Selenium1</h2><h3 id="m0">TestCases.TestCase9#TC09</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>SATT21.05.09-NguyenThanhVien-Selenium1</h2><h3 id="m0">TestCases.FTTC202#FTTC201</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th><th>Parameter #9</th><th>Parameter #10</th><th>Parameter #11</th><th>Parameter #12</th><th>Parameter #13</th><th>Parameter #14</th><th>Parameter #15</th><th>Parameter #16</th><th>Parameter #17</th><th>Parameter #18</th><th>Parameter #19</th><th>Parameter #20</th></tr><tr class="param stripe"><td>Sài Gòn</td><td>Đà Nẵng</td><td>Soft bed</td><td>1</td><td>Sài Gòn</td><td>Phan Thiết</td><td>Soft bed</td><td>1</td><td>Sài Gòn</td><td>Nha Trang</td><td>Soft bed</td><td>1</td><td>Sài Gòn</td><td>Huế</td><td>Soft bed</td><td>1</td><td>Sài Gòn</td><td>Quảng Ngãi</td><td>Soft bed</td><td>1</td></tr><tr><th colspan="20">Exception</th></tr><tr><td colspan="20"><div class="stacktrace">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element &lt;input type=&quot;submit&quot; value=&quot;Book ticket&quot;&gt; is not clickable at point (110, 547). Other element would receive the click: &lt;div style=&quot;width: 100%; color: White; font-family: &amp;quot;Helvetica Neue&amp;quot;, &amp;quot;Lucida Grande&amp;quot;, &amp;quot;Segoe UI&amp;quot;, Arial, Helvetica, Verdana, sans-serif; font-size: 11pt;&quot;&gt;...&lt;/div&gt;
+  (Session info: chrome=97.0.4692.71)
+Build info: version: &apos;4.1.1&apos;, revision: &apos;e8fcc2cecf&apos;
+System info: host: &apos;DESKTOP-MI9U9J4&apos;, ip: &apos;192.168.1.6&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;11.0.13&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [d38ef29cce487ec2edac50a8a3262f80, clickElement {id=390354a6-0c27-441f-9e37-aea013ea1a58}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 97.0.4692.71, chrome: {chromedriverVersion: 96.0.4664.18 (b8887b3d1742a..., userDataDir: C:\Users\av\AppData\Local\T...}, goog:chromeOptions: {debuggerAddress: localhost:65141}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: WINDOWS, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:65141/devtoo..., se:cdpVersion: 97.0.4692.71, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on WINDOWS (d38ef29cce487ec2edac50a8a3262f80)] -&gt; xpath: //input[@value=&apos;Book ticket&apos;]]
+Session ID: d38ef29cce487ec2edac50a8a3262f80
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:184)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:543)
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:251)
+	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:77)
+	at PageObjects.BookTicket.clickBtnBookTicket(BookTicket.java:104)
+	at TestCases.FTTC202.FTTC201(FTTC202.java:44)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
+	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)
+... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
