--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_Suite" class="navigator-link">
-              <span class="suite-name border-passed">Default Suite</span>
+              <span class="suite-name border-failed">Default Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -93,21 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_Suite" class="hide-methods passed suite-Default_Suite"> (hide)</a> <!-- hide-methods passed suite-Default_Suite -->
-                      <a href="#" panel-name="suite-Default_Suite" class="show-methods passed suite-Default_Suite"> (show)</a> <!-- show-methods passed suite-Default_Suite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_Suite" class="hide-methods failed suite-Default_Suite"> (hide)</a> <!-- hide-methods failed suite-Default_Suite -->
+                      <a href="#" panel-name="suite-Default_Suite" class="show-methods failed suite-Default_Suite"> (show)</a> <!-- show-methods failed suite-Default_Suite -->
                     </span>
-                    <div class="method-list-content passed suite-Default_Suite">
+                    <div class="method-list-content failed suite-Default_Suite">
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_Suite" title="TestCases.TestCase9" class="method navigator-link" hash-for-method="TC09">TC09</a> <!-- method navigator-link -->
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_Suite" title="TestCases.FTTC202" class="method navigator-link" hash-for-method="FTTC201(Sài Gòn, Đà Nẵng, Soft bed, 1, Sài Gòn, Phan Thiết, Soft bed, 1, Sài Gòn, Nha Trang, Soft bed, 1, Sà...)">FTTC201(Sài Gòn, Đà Nẵng, Soft bed, 1, Sài Gòn, Phan Thiết, Soft bed, 1, Sài Gòn, Nha Trang, Soft bed, 1, Sà...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Default_Suite -->
+                    </div> <!-- method-list-content failed suite-Default_Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -119,23 +119,49 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_Suite" class="panel Default_Suite">
-          <div class="suite-Default_Suite-class-passed">
+          <div class="suite-Default_Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">TestCases.TestCase9</span>
+              <img src="failed.png"/>
+              <span class="class-name">TestCases.FTTC202</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC09">
-                  </a> <!-- TC09 -->
-                  <span class="method-name">TC09</span>
+                  <a name="FTTC201(Sài Gòn, Đà Nẵng, Soft bed, 1, Sài Gòn, Phan Thiết, Soft bed, 1, Sài Gòn, Nha Trang, Soft bed, 1, Sà...)">
+                  </a> <!-- FTTC201(Sài Gòn, Đà Nẵng, Soft bed, 1, Sài Gòn, Phan Thiết, Soft bed, 1, Sài Gòn, Nha Trang, Soft bed, 1, Sà...) -->
+                  <span class="method-name">FTTC201</span>
+                  <span class="parameters">(Sài Gòn, Đà Nẵng, Soft bed, 1, Sài Gòn, Phan Thiết, Soft bed, 1, Sài Gòn, Nha Trang, Soft bed, 1, Sài Gòn, Huế, Soft bed, 1, Sài Gòn, Quảng Ngãi, Soft bed, 1)</span>
+                  <div class="stack-trace">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element &lt;input type=&quot;submit&quot; value=&quot;Book ticket&quot;&gt; is not clickable at point (110, 547). Other element would receive the click: &lt;div style=&quot;width: 100%; color: White; font-family: &amp;quot;Helvetica Neue&amp;quot;, &amp;quot;Lucida Grande&amp;quot;, &amp;quot;Segoe UI&amp;quot;, Arial, Helvetica, Verdana, sans-serif; font-size: 11pt;&quot;&gt;...&lt;/div&gt;
+  (Session info: chrome=97.0.4692.71)
+Build info: version: &apos;4.1.1&apos;, revision: &apos;e8fcc2cecf&apos;
+System info: host: &apos;DESKTOP-MI9U9J4&apos;, ip: &apos;192.168.1.6&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;11.0.13&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [d38ef29cce487ec2edac50a8a3262f80, clickElement {id=390354a6-0c27-441f-9e37-aea013ea1a58}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 97.0.4692.71, chrome: {chromedriverVersion: 96.0.4664.18 (b8887b3d1742a..., userDataDir: C:\Users\av\AppData\Local\T...}, goog:chromeOptions: {debuggerAddress: localhost:65141}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: WINDOWS, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:65141/devtoo..., se:cdpVersion: 97.0.4692.71, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on WINDOWS (d38ef29cce487ec2edac50a8a3262f80)] -&gt; xpath: //input[@value=&apos;Book ticket&apos;]]
+Session ID: d38ef29cce487ec2edac50a8a3262f80
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:184)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:543)
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:251)
+	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:77)
+	at PageObjects.BookTicket.clickBtnBookTicket(BookTicket.java:104)
+	at TestCases.FTTC202.FTTC201(FTTC202.java:44)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
+	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)
+... Removed 28 stack frames
+</div> <!-- stack-trace -->
                   <em>
-(TC09 - User can't change password when 'New Password' and 'Confirm Password' are different.)                  </em>
+(FTTC201 - User can book 1 ticket at a time)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_Suite-class-passed -->
+          </div> <!-- suite-Default_Suite-class-failed -->
         </div> <!-- panel Default_Suite -->
         <div panel-name="test-xml-Default_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -148,7 +174,7 @@
 &lt;suite name=&quot;Default Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;SATT21.05.09-NguyenThanhVien-Selenium1&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestCases.TestCase9&quot;/&gt;
+      &lt;class name=&quot;TestCases.FTTC202&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- SATT21.05.09-NguyenThanhVien-Selenium1 --&gt;
 &lt;/suite&gt; &lt;!-- Default Suite --&gt;
@@ -190,9 +216,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC09')
-data.setCell(0, 2, 'TestCases.TestCase9')
-data.setCell(0, 3, 11270);
+data.setCell(0, 1, 'FTTC201')
+data.setCell(0, 2, 'TestCases.FTTC202')
+data.setCell(0, 3, 11116);
 window.suiteTableData['Default_Suite']= { tableData: data, tableDiv: 'times-div-Default_Suite'}
 return data;
 }
@@ -223,26 +249,28 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestCases.TestCase9</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TestCases.FTTC202</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">initTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">174 ms</span>
+                <span class="method-start">502 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TC09</span>
-                <span class="method-start">6764 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">FTTC201(Sài Gòn, Đà Nẵng, Soft bed, 1, Sài Gòn, Phan Thiết, Soft bed, 1, Sài Gòn, Nha Trang, Soft bed, 1, Sà...)</span>
+                <span class="method-start">6922 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">18035 ms</span>
+                <span class="method-start">18057 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">closeTest</span>
-                <span class="method-start">18690 ms</span>
+                <span class="method-start">18703 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
